examples/test/testpolicy9479.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9479
  namespace: namespace32
spec:
  podSelector:
    matchLabels:
      key30: value38
      key38: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value13
      podSelector:
        matchLabels:
          key21: value41
          key28: value34
